--- a/css/style.css
+++ b/css/style.css
@@ -41,4 +41,5 @@ button:hover{
 
 .container {
 	background-image: url('https://i.ytimg.com/vi/SH8wDkqA_50/hqdefault.jpg');
+	background-size: all;
 }
