--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,6 +13,14 @@ h1 {
 	text-transform: uppercase;
 }
 
+h2 {
+	text-align: center;
+	color: white;
+	text-shadow: 2px 2px 3px red;
+	text-transform: uppercase;
+	letter-spacing: 3px;
+}
+
 #messages, #result {
 	text-align: center;
 	color: red;
